--- a/hw-1/homework_1_62081_2ba3d5-168549-2f5b1d.ipynb
+++ b/hw-1/homework_1_62081_2ba3d5-168549-2f5b1d.ipynb
@@ -66,12 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def share_bread(N, K):\n",
-    "    # your code here\n",
+    "    x= K//N\n",
+    "    y= K%N\n",
     "    return x, y\n",
     "\n",
     "# если в функции всё верно, то после выполнения этой строчки, не должно выскакивать ошибок\n",
@@ -89,12 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def leap_year(year):\n",
-    "    # your code here\n",
+    "    text_result=\"YOU SHALL NOT PASS\"\n",
+    "    if year%4==0 and year%100!=0:\n",
+    "        text_result=\"YOU SHALL PASS\"\n",
+    "    if year%400==0:\n",
+    "        text_result=\"YOU SHALL PASS\"\n",
     "    return text_result\n",
     "\n",
     "assert leap_year(5) == 'YOU SHALL NOT PASS'"
@@ -115,12 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def amulet_area(a, b, c):\n",
-    "    # your code here\n",
+    "    p=(a+b+c)/2\n",
+    "    S=(p*(p-a)*(p-b)*(p-c))**.5\n",
     "    return S\n",
     "\n",
     "assert amulet_area(3, 4, 5) == 6"
@@ -145,34 +151,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def cal_euclidean(a, b):    \n",
-    "    ## Your code here\n",
+    "    distance=sum((a-b)**2)\n",
     "    return distance\n",
     "\n",
     "def cal_manhattan(a, b):    \n",
-    "    ## Your code here\n",
+    "    distance=sum(abs(a-b))\n",
     "    return distance\n",
     "\n",
     "def cal_cosine(a, b):    \n",
-    "    ## Your code here\n",
+    "    dot_product = np.dot(a, b)\n",
+    "    norm_a = np.linalg.norm(a)\n",
+    "    norm_b = np.linalg.norm(b)\n",
+    "    cosine_similarity = dot_product / (norm_a * norm_b)\n",
+    "    distance = 1 - cosine_similarity\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size: 3  min value: -30  max value: 30\n",
+      "a: [22  6  5]\n",
+      "b: [-27  11 -12]\n",
+      "euclidean: 2715\n",
+      "manhattan 71\n",
+      "cosine 1.79888797243762\n"
+     ]
+    }
+   ],
    "source": [
-    "a = np.random.randint(-10, 10, size=10)\n",
-    "b = np.random.randint(-10, 10, size=10)\n",
-    "print(cal_euclidean(a, b))\n",
-    "print(cal_manhattan(a, b))\n",
-    "print(cal_cosine(a, b))"
+    "array_size = np.random.randint(1, 10)\n",
+    "max_value = 30\n",
+    "min_value = max_value * -1\n",
+    "a = np.random.randint(min_value, max_value, size=array_size)\n",
+    "b = np.random.randint(min_value, max_value, size=array_size)\n",
+    "print(\"size:\",array_size, \" min value:\", min_value,\" max value:\",max_value)\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)\n",
+    "print(\"euclidean:\",cal_euclidean(a, b))\n",
+    "print(\"manhattan\",cal_manhattan(a, b))\n",
+    "print(\"cosine\",cal_cosine(a, b))"
    ]
   },
   {
@@ -196,11 +227,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 0.0\n",
+      "[0.48575098 0.49626972 0.86879772 0.99681962 0.51019453 0.66932103\n",
+      " 0.07786511 0.02366436 0.59215169 0.         0.12809789 0.2914777\n",
+      " 0.80950543 0.09882044 0.02473932 0.33485116 0.64378397 0.02795123\n",
+      " 0.94414508 0.67209559 0.08730156 1.         0.23931575 0.37443517\n",
+      " 0.55842479 0.93928423 0.15311093 0.17452532 0.3357387  0.44381725\n",
+      " 0.36977343 0.62317471 0.87011915 0.36180855 0.31320873 0.89102286\n",
+      " 0.80197524 0.13867243 0.60953055 0.71543864 0.90885226 0.02045597\n",
+      " 0.97991658 0.97223038 0.27217463 0.42966703 0.20349618 0.05614242\n",
+      " 0.68988716 0.6578928  0.54539676 0.84423166 0.27778763 0.45758487\n",
+      " 0.53008755 0.41881254 0.85299954 0.52709008 0.8254227  0.75406733\n",
+      " 0.65738838 0.84529178 0.43379305 0.9520815  0.66431109 0.96592878\n",
+      " 0.48256373 0.46800674 0.40099394 0.92665294 0.81544725 0.06025877\n",
+      " 0.0773314  0.17965306 0.78815864 0.86725032 0.4593953  0.05588329\n",
+      " 0.76533862 0.58483014 0.06875553 0.83161452 0.19706518 0.04166134\n",
+      " 0.14065465 0.3770097  0.88760071 0.60431353 0.51266833 0.75224957\n",
+      " 0.3121618  0.22335039 0.39921552 0.85878323 0.75708349 0.6216078\n",
+      " 0.69008336 0.04940122 0.83091685 0.93737766]\n"
+     ]
+    }
+   ],
    "source": [
-    "my_array = ## Your code here\n",
+    "array_size = 100\n",
+    "my_array = np.random.rand(array_size)\n",
+    "i = np.where(my_array == np.max(my_array))\n",
+    "my_array[i]=1\n",
+    "i= np.where(my_array == np.min(my_array))\n",
+    "my_array[i]=0\n",
     "print(np.max(my_array), np.min(my_array))\n",
     "print(my_array)"
    ]
@@ -214,12 +275,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape:  (5, 6)\n",
+      "Array\n",
+      "[[31 16 36 49 31 40]\n",
+      " [ 0 32 36 33 27 43]\n",
+      " [10 19 16 27 21 35]\n",
+      " [30 23 32 26 19  4]\n",
+      " [45 27  8 42 26 15]]\n",
+      "[[49]\n",
+      " [33]\n",
+      " [27]\n",
+      " [26]\n",
+      " [42]]\n"
+     ]
+    }
+   ],
    "source": [
-    "my_array = ## Your code here\n",
-    "selected_column = ## Your code here\n",
+    "my_array=np.random.randint(0,51, size=(5, 6))\n",
+    "i, j = np.where(my_array == np.max(my_array))\n",
+    "selected_column = my_array[:, j]\n",
     "print('Shape: ',my_array.shape)\n",
     "print('Array')\n",
     "print(my_array)\n",
@@ -230,25 +311,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Напишите функцию, которая принимает на вохд матрицу (array) X и возвращает все её уникальные строки в виде новой матрицы."
+    "Напишите функцию, которая принимает на вход матрицу (array) X и возвращает все её уникальные строки в виде новой матрицы."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_unique_rows(X):\n",
-    "    # Your code here\n",
+    "    X_unique = np.unique(X, axis=0)\n",
     "    return X_unique"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5 5]\n",
+      " [5 4 4]\n",
+      " [5 4 4]\n",
+      " [4 5 5]\n",
+      " [4 4 4]\n",
+      " [4 5 4]\n",
+      " [5 5 5]\n",
+      " [4 5 5]\n",
+      " [4 4 4]\n",
+      " [5 4 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.random.randint(4, 6, size=(10,3))\n",
     "print(X)"
@@ -256,17 +354,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 4, 4],\n",
+       "       [4, 5, 4],\n",
+       "       [4, 5, 5],\n",
+       "       [5, 4, 4],\n",
+       "       [5, 5, 5]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_unique_rows(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
